# src/main/java/com/invillia/acme/controller/StoreControllerV1.java
@@ -2,10 +2,9 @@ package com.invillia.acme.controller;
 
 import java.math.BigInteger;
 import java.util.List;
-import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -17,37 +16,37 @@ import com.invillia.acme.repository.StoreRepository;
 import com.invillia.acme.store.model.Store;
 
 @RestController
+@RequestMapping("/api/v1")
 public class StoreControllerV1 {
-	
-	
+
 	@Autowired
 	private StoreRepository repository;
-	
-	@RequestMapping(method = RequestMethod.POST,  value =  "/api/v1/stores")
-    public void addStore(@RequestBody Store store){
-    	repository.save(store);
-    }
 
-    @PutMapping("/api/v1/store/{id}")
-    public ResponseEntity<Object> updateStore(@RequestBody Store store, @PathVariable BigInteger id) {
+	// Create a Store
+	@RequestMapping(value = "/createStore", method = RequestMethod.POST)
+	public void createStore(@RequestBody Store store) {
+		repository.save(store);
+	}
 
-    	Optional<Store> storeOptional = repository.findById(id);
-    	if (!storeOptional.isPresent())
-    		return ResponseEntity.notFound().build();
+	// Update a Store information
+	@PutMapping("/updateStore/{id}")
+	public Store updateStore(@RequestBody Store newStore, @PathVariable BigInteger id) {
 
-    	store.setId(id);
-    	repository.save(store);
-    	return ResponseEntity.noContent().build();
-    }
-    
-	@RequestMapping("/store/{name}")
-    public List<Store> getRecognition(@PathVariable("name") String name){
-        return repository.findByName(name);
-    }
+		return repository.findById(id).map(store -> {
+			store.setName(newStore.getName());
+			store.setAddress(newStore.getAddress());
+			return repository.save(store);
+		}).orElseGet(() -> {
+			newStore.setId(id);
+			return repository.save(newStore);
+		});
 
-    @RequestMapping("/colleagues")
-    public List<Store> getStores(){
-        return repository.findAll();
-    }
+	}
+
+	// Retrieve a Store by parameters
+	@GetMapping("/findStore/{name}")
+	public List<Store> getRecognition(@PathVariable("name") String name) {
+		return repository.findByName(name);
+	}
 
 }
